<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLocationActivity">


    <EditText
        android:id="@+id/search_location_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="16dp"
        android:editable="false"
        android:ems="10"
        android:hint="Please enter a city"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_location_confirm"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_location_text" />

    <Button
        android:id="@+id/add_location_clear"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="Clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_location_text" />


</androidx.constraintlayout.widget.ConstraintLayout>