<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="CS427 Project App" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="List of Locations" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/locationRecView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:scrollbarSize="5dp"
            android:scrollbars="vertical"
            android:scrollbarThumbVertical="@color/cardview_dark_background"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/buttonAddLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add a location" />

        <ImageButton
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_logout" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>