...
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_marginEnd="148dp"-->
<!--        android:text="Detail"-->
<!--        android:gravity="center_vertical"/>-->

    <Button
        android:id="@+id/locationWeather"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="120dp"
        android:gravity="center_vertical"
        android:text="Weather"
...
