...
        android:contentDescription="@string/background"
        android:scaleType="fitXY"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="111dp" />

    <TextView
        android:id="@+id/city_name_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
...
