<resources>
    <string name="app_name">Team 23</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="hello_and_welcome">Create Account</string>
    <string name="please_enter_your_username">Please enter your username</string>
    <string name="clear_username">Clear Username</string>
    <string name="clear_password">Clear Password</string>
    <string name="confirm_sign_up">Confirm Sign Up</string>
    <string name="city_management">City Management</string>
    <string name="username">Username</string>
...
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="reset_password">Reset password</string>
    <string name="confirm_password">confirm password</string>
    <string name="temperature">temperature</string>
    <string name="humidity">humidity</string>
    <string name="wind">wind</string>
    <string name="weather_condition">Weather Condition</string>
    <string name="city">City</string>
...
