...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:id="@+id/password_reset"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/reset_password"
        android:gravity="center"
...
